k8s/mlflow/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mlflow-route
  labels:
    app: mlflow
spec:
  to:
    kind: Service
    name: mlflow
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
